--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Students</title>
     <link rel="stylesheet" href="/css/styles.css" />
     <script src="Javascript/main.js"></script>
   </head>
   <body></body>
 </html>
 
- <!-- PRUEBA -->
- <!-- FIN PRUEBA -->
+<!-- PRUEBA -->
+<!-- FIN PRUEBA -->
