--- a/index.html
+++ b/index.html
@@ -4,11 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <script src="Javascript/main.js"></script>
   </head>
-  <body></body>
-</html>
-
-<!-- PRUEBA -->
-<!-- FIN PRUEBA -->
+  <html>
+    <body>
+      <!-- PRUEBA "grey_bar"--> 
+      <nav class="grey_bar">
+        <ul class="horizontal">
+          <li>           
+            <a href="#">
+              <img src="Scss/_7th-March.jpg" width="20" height="20" /> 
+              Opción 1
+            </a> 
+          </li>
+          <li> 
+            <a href="#">
+              <img src="Scss/_7th-March.jpg" width="20" height="20" /> 
+              Opción 2+ 
+            </a> 
+              <ul class="vertical">
+                <li> <a> Opción 2.A </a> </li>
+                <li> <a> Opción 2.B </a> </a></li>
+                <li> <a> Opción 2.C </a> </li>
+              </ul>
+          </li>
+          <li> 
+            <a href="">
+              <img src="Scss/_7th-March.jpg" width="20" height="20" /> 
+              Opción 3+ 
+            </a> 
+              <ul class="vertical">
+                <li> <a> Opción 3.A </a> </li>
+                <li> <a> Opción 3.B </a> </a></li>
+                <li> <a> Opción 3.C </a> </li>
+              </ul>
+          </li>
+        </ul>
+      </nav>
+      <!-- FIN PRUEBA "grey_bar"-->
+    </body>
+  </html>
