correccion carpeta imagenes

--- a/index.html
+++ b/index.html
@@ -17,17 +17,20 @@
   <html>
     <body>
       <!-- PRUEBA "grey_bar"--> 
+      <header>
+        
+      </header>
       <nav class="grey_bar">
         <ul class="horizontal">
           <li>           
             <a href="#">
-              <img src="Scss/_7th-March.jpg" width="20" height="20" /> 
+              <img src="Img/_7th-March.jpg" width="20" height="20" /> 
               Opción 1
             </a> 
           </li>
           <li> 
             <a href="#">
-              <img src="Scss/_7th-March.jpg" width="20" height="20" /> 
+              <img src="Img/_7th-March.jpg" width="20" height="20" /> 
               Opción 2+ 
             </a> 
               <ul class="vertical">
@@ -38,7 +41,7 @@
           </li>
           <li> 
             <a href="">
-              <img src="Scss/_7th-March.jpg" width="20" height="20" /> 
+              <img src="Img/_7th-March.jpg" width="20" height="20" /> 
               Opción 3+ 
             </a> 
               <ul class="vertical">
