--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <body>
       <!-- PRUEBA "grey_bar"--> 
       <header>
-        
+        <div>
+          <div></div>
+        </div>
       </header>
       <nav class="grey_bar">
         <ul class="horizontal">
