--- a/index.html
+++ b/index.html
@@ -7,54 +7,94 @@
     <link rel="stylesheet" href="css/styles.css" />
     <script src="Javascript/main.js"></script>
     <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <html>
     <body>
-      <!-- PRUEBA "grey_bar"--> 
+      <!-- PRUEBA "grey_bar"-->
       <header>
-        <div>
-          <div></div>
+        <div class="containerleft">
+          <i class="fa-solid fa-spider"></i> EmikukiS
+        </div>
+        <div class="containeright">
+          <div class="countainer-top">
+            <ul>
+              <li class="nav-twitter">
+                <i class="icon fa-brands fa-twitter"></i>
+              </li>
+              <li class="nav-instagram">
+                <i class="icon fa-brands fa-instagram"></i>
+              </li>
+              <li class="nav-search">
+                <i class="icon fa-solid fa-magnifying-glass"></i>
+                <span class="text">Search</span>
+              </li>
+              <li class="nav-help">Help</li>
+              <li class="nav-login">Sign In</li>
+            </ul>
+          </div>
+          <div class="contenedor_A">
+            <ul class="">
+              <li><a href="https://www.youtube.com/">SHOP</a></li>
+              <li><a>BLOG</a></li>
+              <li><a>ABOUT</a></li>
+            </ul>
+            <div>CART<i class="fa-solid fa-cart-shopping"></i></div>
+          </div>
         </div>
       </header>
+      <article class="imagen">
+        <section>
+          <h1>SECOND EDITION</h1>
+          <h2>Ethan Marcotte</h2>
+          <h3>RESPONSIVE WEB DESIGN</h3>
+          <h4><span>FOREWORK BY</span> JEREMY KEITH</h4>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Commodi
+            iure accusamus error asperiores incidunt atque temporibus ducimus
+            nemo eligendi possimus repellendus quidem cum laudantium autem nulla
+            dignissimos tenetur, laboriosam veritatis!
+          </p>
+        </section>
+      </article>
       <nav class="grey_bar">
         <ul class="horizontal">
-          <li>           
+          <li>
             <a href="#">
-              <img src="Img/_7th-March.jpg" width="20" height="20" /> 
+              <img src="Img/_7th-March.jpg" width="20" height="20" />
               Opción 1
-            </a> 
+            </a>
           </li>
-          <li> 
+          <li>
             <a href="#">
-              <img src="Img/_7th-March.jpg" width="20" height="20" /> 
-              Opción 2+ 
-            </a> 
-              <ul class="vertical">
-                <li> <a> Opción 2.A </a> </li>
-                <li> <a> Opción 2.B </a> </a></li>
-                <li> <a> Opción 2.C </a> </li>
-              </ul>
+              <img src="Img/_7th-March.jpg" width="20" height="20" />
+              Opción 2+
+            </a>
+            <ul class="vertical">
+              <li><a> Opción 2.A</a></li>
+              <li><a> Opción 2.B</a></li>
+              <li><a> Opción 2.C</a></li>
+            </ul>
           </li>
-          <li> 
+          <li>
             <a href="">
-              <img src="Img/_7th-March.jpg" width="20" height="20" /> 
-              Opción 3+ 
-            </a> 
-              <ul class="vertical">
-                <li> <a> Opción 3.A </a> </li>
-                <li> <a> Opción 3.B </a> </a></li>
-                <li> <a> Opción 3.C </a> </li>
-              </ul>
+              <img src="Img/_7th-March.jpg" width="20" height="20" />
+              Opción 3+
+            </a>
+            <ul class="vertical">
+              <li><a> Opción 3.A </a></li>
+              <li><a> Opción 3.B </a></li>
+              <li><a> Opción 3.C </a></li>
+            </ul>
           </li>
         </ul>
       </nav>
       <!-- FIN PRUEBA "grey_bar"-->
-
     </body>
   </html>
+</html>
