--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
             <ul class="vertical">
               <li><a> Opción 2.A</a></li>
               <li><a> Opción 2.B</a></li>
-              <li><a> Opción 2.C</a></li>
+              <li><a> Opción 3.C</a></li>
+              <li><a> Opción 4.D</a></li>
             </ul>
           </li>
           <li>
@@ -94,6 +95,7 @@
           </li>
         </ul>
       </nav>
+      <h1>Hola a todos!</h1>
       <!-- FIN PRUEBA "grey_bar"-->
     </body>
   </html>
