--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css" />
-    <script src="Javascript/main.js"></script>
+    <script defer src="Javascript/main.js"></script>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
@@ -95,6 +95,7 @@
           </li>
         </ul>
       </nav>
+      <nav id="nav_options" class="grey_bar"></nav>
       <!-- FIN PRUEBA "grey_bar"-->
     </body>
   </html>
