--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
   </head>
   <html>
     <body>
-      <!-- PRUEBA "grey_bar"-->
       <header>
         <div class="containerleft">
           <i class="fa-solid fa-spider"></i> EmikukiS
@@ -62,6 +61,7 @@
           </p>
         </section>
       </article>
+      <!-- INICIO "grey_bar"-->
       <nav class="grey_bar">
         <ul class="horizontal">
           <li>
@@ -78,8 +78,7 @@
             <ul class="vertical">
               <li><a> Opción 2.A</a></li>
               <li><a> Opción 2.B</a></li>
-              <li><a> Opción 3.C</a></li>
-              <li><a> Opción 4.D</a></li>
+              <li><a> Opción 2.C</a></li>
             </ul>
           </li>
           <li>
@@ -95,7 +94,36 @@
           </li>
         </ul>
       </nav>
-      <!-- FIN PRUEBA "grey_bar"-->
+      <!-- FIN "grey_bar"-->
+      <!-- INICIO "main_container"-->
+      <main class="main_container">
+        <section class="content">
+          <p>
+            Since is groundbreaking release in 2011, 
+              <i>Responsive Web Design</i>
+            remains a funtamental resource for anyone working on the web.
+            <br>
+            <br>
+            Learn how to think beyond the desktop, and craft designs that respond to your user's needs.
+            In the second edition, Ethan Marcotte expands on the design principles behind fluids grid, flexible images, and media queries.
+            Through new examples and updated facts and figures, you'll learn how to deliver a quality experience, no matter how large or small the display.
+          </p>
+        </section>
+        <aside class="sidebar">
+          <button>
+            Read a sample chapter
+          </button>
+          <h2>Contenidos</h2>
+          <ul>
+            <li><a> Our responsive web </a></li>
+            <li><a> The flexible grid </a></li>
+            <li><a> Flexible images </a></li>
+            <li><a> Media queries </a></li>
+            <li><a> Becoming responsive </a></li>
+          </ul>
+        </aside>
+      </main>
+      <!-- FIN "main_container" -->
     </body>
   </html>
 </html>
