--- a/index.html
+++ b/index.html
@@ -99,20 +99,21 @@
       <main class="main_container">
         <section class="content">
           <p>
-            Since is groundbreaking release in 2011, 
-              <i>Responsive Web Design</i>
+            Since is groundbreaking release in 2011,
+            <i>Responsive Web Design</i>
             remains a funtamental resource for anyone working on the web.
-            <br>
-            <br>
-            Learn how to think beyond the desktop, and craft designs that respond to your user's needs.
-            In the second edition, Ethan Marcotte expands on the design principles behind fluids grid, flexible images, and media queries.
-            Through new examples and updated facts and figures, you'll learn how to deliver a quality experience, no matter how large or small the display.
+            <br />
+            <br />
+            Learn how to think beyond the desktop, and craft designs that
+            respond to your user's needs. In the second edition, Ethan Marcotte
+            expands on the design principles behind fluids grid, flexible
+            images, and media queries. Through new examples and updated facts
+            and figures, you'll learn how to deliver a quality experience, no
+            matter how large or small the display.
           </p>
         </section>
         <aside class="sidebar">
-          <button>
-            Read a sample chapter
-          </button>
+          <button>Read a sample chapter</button>
           <h2>Contenidos</h2>
           <ul>
             <li><a> Our responsive web </a></li>
@@ -124,6 +125,14 @@
         </aside>
       </main>
       <!-- FIN "main_container" -->
+      <footer class="box_flex_footer">
+        <div class="align_footer">
+          <div class="border_right">sa</div>
+          <div>s</div>
+          <div>s</div>
+          <div>s</div>
+        </div>
+      </footer>
     </body>
   </html>
 </html>
